--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -7,5 +7,10 @@
 </head>
 <body>
 <h1>Login Admin</h1>
+<form action="#" method="post">
+    <input type="text" name="username" placeholder="Username">
+    <input type="password" name="password" placeholder="Password">
+    <input type="submit" value="Login">
+</form>
 </body>
 </html>
