--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <h1>Admin Dashboard</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block header %}
+    <title>Admin Login</title>
+{% endblock %}
+{% block body %}
+    <a href="/admin/dashboard/product">صفحه ی محصولات</a>
+{% endblock %}
