--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -1,3 +1,11 @@
+{% extends 'base.html' %}
+
+{% block header %}
+    <title>Admin Login</title>
+{% endblock %}
+{% block body %}
+{% endblock %}
+
 <!doctype html>
 <html lang="en">
 <head>
